--- a/clase3/css/maquetado.css
+++ b/clase3/css/maquetado.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;500&display=swap');
+
+body{
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 200;
+}
+
 a{
     text-decoration: none;
 }
@@ -6,9 +13,13 @@ header{
     height: 100px;
     /* width: 1000px; */
     background-color: #004A61;
+    display: flex;
+    justify-content: center; /* centrado horizontal */
+    align-items: center; /* centrado en vertical */
 }
     nav a{
         color: #fff;
+        margin: 10px;
     }
 
 
